--- a/JavaInternTraining/.vscode/settings.json
+++ b/JavaInternTraining/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": [
         "ChapterEight",
         "ChapterNineExercises/chapterNineExerciseOne",
-        "ChapterNineExercises"
+        "ChapterNineExercises",
+        "chapterTenReview",
+        "."
     ]
 }
